add informaticon and program

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,71 +1,142 @@
 {
-    "welcome": "Willkommen",
-    "contact_title": "Kontakt",
-    "contact_subtitle": "Kontaktiere uns",
-    "contact_description": "Füllen Sie das Formular aus und unser Team wird Ihnen innerhalb von 24 Stunden antworten.",
-    "contact_name": "Vorname",
-    "contact_lastname": "Nachname",
-    "contact_email": "E-Mail",
-    "contact_phone": "Telefon",
-    "contact_message": "Nachricht",
-    "contact_message_placeholder": "Schreiben Sie hier Ihre Nachricht",
-    "contact_send": "Senden",
-    "services_title": "Dienstleistungen",
-    "process_title": "Prozess",
-    "slide1_text": "Wir entwickeln einzigartige Sporterlebnisse für Teams, die mit Leidenschaft weiter spielen.",
-    "slide2_text": "Reisen, konkurrieren und leben Sie das Sportleben wie ein Legend.",
-    "slide3_text": "Entdecken Sie neue Horizont und testen Sie Ihre Grenzen.",
-    "slide4_text": "Überwinden Sie das Spielfeld und hinterlassen Sie Ihre Spur in der Geschichte.",
-    "service_accommodation": "Unterkunft",
-    "service_accommodation_desc": "Komfortable Zimmer für Ihr Team",
-    "service_transport": "Transport",
-    "service_transport_desc": "Sichere und zeitnahe Überfahrten",
-    "service_matches": "Spiele",
-    "service_matches_desc": "Konkurrieren Sie mit internationalen Teams",
-    "service_training": "Training",
-    "service_training_desc": "Geführte Sessions von Profis",
-    "service_tours": "Touren",
-    "service_tours_desc": "Entdecken Sie die Stadt und die Kultur",
-    "service_other": "Andere",
-    "service_other_desc": "Zusätzliche Dienstleistungen für Ihre Komfort",
-    "hero_title": "SPORTSTOURISM IN VALENCIA",
-    "hero_subtitle": "VETERAN RUGBY & HOCKEY ERFAHRUNGEN",
-    "hero_description": "Wir entwickeln einzigartige Sporterlebnisse für Teams in der Valencianischen Gemeinschaft und der Costa del Sol. Reisen, genießen und leben Sie das Sportleben wie ein Legend.", 
-    "how_we_work": "Wie wir arbeiten",
-    "experiences": "Erlebnisse",
-    "howwework_contact": "Kontakt",
-    "howwework_contact_desc": "Kontaktiere uns",
-    "howwework_design": "Reise planen",
-    "howwework_design_desc": "Wir planen Ihr perfektes Erlebnis",
-    "howwework_arrival": "Ankunft",
-    "howwework_arrival_desc": "Willkommen und starten Sie Ihre Abenteuer",
-    "howwework_celebration": "Feierabend",
-    "howwework_celebration_desc": "Genießen Sie das Spiel und die Party",
-    "howwework_play": "Spielen",
-    "howwework_play_desc": "Spielen Sie mit den besten Teams",
-    "footer_description": "Spezialisten für Sporttourismus für Veteranenrugby- und Hockeyteams in der Valencianischen Gemeinschaft und der Costa del Sol.",
-    "footer_quick_links": "Schnellzugriffe",
-    "footer_contact": "Kontakt",
-    "footer_rights": "Alle Rechte vorbehalten.",
-    "contact_success": "Ihre Nachricht wurde erfolgreich gesendet.",
-    "contact_error": "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
-    "experience_rugby_team": "Valencia Veterans RFC",
-    "experience_rugby_sport": "Rugby",
-    "experience_rugby_country": "Spanien",
-    "experience_rugby_story": "Wir sind wegen des Turniers hingefahren... und kamen mit Muskelkater vom vielen Lachen zurück. Die Organisation war tadellos: von der ersten E-Mail bis zum letzten Bier. Man merkt, dass die Organisatoren wissen, was Rugby ist, was eine echte dritte Halbzeit bedeutet und was Veteranen brauchen, um ohne Druck Spaß zu haben. Wir haben intensive, aber nicht verrückte Spiele gespielt, wie Könige gegessen und das Hotel hatte sogar einen Bereich zum Dehnen nach den Spielen (einige von uns haben ihn für ein Nickerchen genutzt). Wir würden sofort wiederkommen. Ach ja, und wir haben den Preis für das Team mit der meisten Zeit an der Bar gewonnen. Verdient.",
-    "experience_rugby_name": "Carlos “Chino” R., Kapitän des Valencia Veterans RFC",
-    "experience_hockey_male_team": "Amsterdam HC",
-    "experience_hockey_male_sport": "Herren-Hockey",
-    "experience_hockey_male_country": "Niederlande",
-    "experience_hockey_male_story": "Wir wussten nicht, ob wir mehr auf dem Feld oder von Bar zu Bar laufen würden. Am Ende haben wir beides gemacht. Es war eine spektakuläre Reise, alles war bis ins Detail organisiert, aber dennoch flexibel. Die Organisatoren waren Sportler, das merkt man: Sie verstehen unser Tempo, unsere Witze und unsere Wehwehchen. Das Turnier hatte ein gutes Niveau, aber keinen Stress. Wir haben Teams aus ganz Europa kennengelernt und am Ende mit ihnen in einem Weinkeller am Meer getanzt. Ein Traum! Wir fragen schon nach der Ausgabe im nächsten Jahr. Hoffentlich können wir mit der gleichen Truppe wiederkommen.",
-    "experience_hockey_male_name": "Jeroen V., erfahrener Torwart des Amsterdam HC",
-    "experience_hockey_female_team": "London Ladies HC",
-    "experience_hockey_female_sport": "Damen-Hockey",
-    "experience_hockey_female_country": "Vereinigtes Königreich",
-    "experience_hockey_female_story": "Was hatten wir für einen Spaß! Es war eine Mischung aus Wettkampf, Sightseeing und Lachen zu jeder Zeit. Wir hatten spannende, aber sehr unterhaltsame Spiele, und abseits des Feldes war die Betreuung tadellos. Alles, was man braucht, wenn man mit einer Gruppe von Frauen über 40 reist: gutes Essen, bequeme Betten und ein Plan, um am Ende des Tages anzustoßen. Es wurde von Leuten organisiert, die unsere Sprache sprechen (die des Sports, natürlich). Wir planen schon neue Trikots... denn wir kommen bestimmt wieder. Danke, dass ihr uns gleichzeitig als Spielerinnen, Freundinnen und Reisende behandelt habt!",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC",
-    "counters_teamsTrustedUs": "Teams, die uns vertraut haben",
+  "welcome": "Willkommen",
+  "contact_title": "Kontakt",
+  "contact_subtitle": "Kontaktiere uns",
+  "contact_description": "Füllen Sie das Formular aus und unser Team wird Ihnen innerhalb von 24 Stunden antworten.",
+  "contact_name": "Vorname",
+  "contact_lastname": "Nachname",
+  "contact_email": "E-Mail",
+  "contact_phone": "Telefon",
+  "contact_message": "Nachricht",
+  "contact_message_placeholder": "Schreiben Sie hier Ihre Nachricht",
+  "contact_send": "Senden",
+  "services_title": "Dienstleistungen",
+  "process_title": "Prozess",
+  "slide1_text": "Wir entwickeln einzigartige Sporterlebnisse für Teams, die mit Leidenschaft weiter spielen.",
+  "slide2_text": "Reisen, konkurrieren und leben Sie das Sportleben wie ein Legend.",
+  "slide3_text": "Entdecken Sie neue Horizont und testen Sie Ihre Grenzen.",
+  "slide4_text": "Überwinden Sie das Spielfeld und hinterlassen Sie Ihre Spur in der Geschichte.",
+  "service_accommodation": "Unterkunft",
+  "service_accommodation_desc": "Komfortable Zimmer für Ihr Team",
+  "service_transport": "Transport",
+  "service_transport_desc": "Sichere und zeitnahe Überfahrten",
+  "service_matches": "Spiele",
+  "service_matches_desc": "Konkurrieren Sie mit internationalen Teams",
+  "service_training": "Training",
+  "service_training_desc": "Geführte Sessions von Profis",
+  "service_tours": "Touren",
+  "service_tours_desc": "Entdecken Sie die Stadt und die Kultur",
+  "service_other": "Andere",
+  "service_other_desc": "Zusätzliche Dienstleistungen für Ihre Komfort",
+  "hero_title": "SPORTSTOURISM IN VALENCIA",
+  "hero_subtitle": "VETERAN RUGBY & HOCKEY ERFAHRUNGEN",
+  "hero_description": "Wir entwickeln einzigartige Sporterlebnisse für Teams in der Valencianischen Gemeinschaft und der Costa del Sol. Reisen, genießen und leben Sie das Sportleben wie ein Legend.",
+  "how_we_work": "Wie wir arbeiten",
+  "experiences": "Erlebnisse",
+  "howwework_contact": "Kontakt",
+  "howwework_contact_desc": "Kontaktiere uns",
+  "howwework_design": "Reise planen",
+  "howwework_design_desc": "Wir planen Ihr perfektes Erlebnis",
+  "howwework_arrival": "Ankunft",
+  "howwework_arrival_desc": "Willkommen und starten Sie Ihre Abenteuer",
+  "howwework_celebration": "Feierabend",
+  "howwework_celebration_desc": "Genießen Sie das Spiel und die Party",
+  "howwework_play": "Spielen",
+  "howwework_play_desc": "Spielen Sie mit den besten Teams",
+  "footer_description": "Spezialisten für Sporttourismus für Veteranenrugby- und Hockeyteams in der Valencianischen Gemeinschaft und der Costa del Sol.",
+  "footer_quick_links": "Schnellzugriffe",
+  "footer_contact": "Kontakt",
+  "footer_rights": "Alle Rechte vorbehalten.",
+  "contact_success": "Ihre Nachricht wurde erfolgreich gesendet.",
+  "contact_error": "Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.",
+  "experience_rugby_team": "Valencia Veterans RFC",
+  "experience_rugby_sport": "Rugby",
+  "experience_rugby_country": "Spanien",
+  "experience_rugby_story": "Wir sind wegen des Turniers hingefahren... und kamen mit Muskelkater vom vielen Lachen zurück. Die Organisation war tadellos: von der ersten E-Mail bis zum letzten Bier. Man merkt, dass die Organisatoren wissen, was Rugby ist, was eine echte dritte Halbzeit bedeutet und was Veteranen brauchen, um ohne Druck Spaß zu haben. Wir haben intensive, aber nicht verrückte Spiele gespielt, wie Könige gegessen und das Hotel hatte sogar einen Bereich zum Dehnen nach den Spielen (einige von uns haben ihn für ein Nickerchen genutzt). Wir würden sofort wiederkommen. Ach ja, und wir haben den Preis für das Team mit der meisten Zeit an der Bar gewonnen. Verdient.",
+  "experience_rugby_name": "Carlos \"Chino\" R., Kapitän des Valencia Veterans RFC",
+  "experience_hockey_male_team": "Amsterdam HC",
+  "experience_hockey_male_sport": "Herren-Hockey",
+  "experience_hockey_male_country": "Niederlande",
+  "experience_hockey_male_story": "Wir wussten nicht, ob wir mehr auf dem Feld oder von Bar zu Bar laufen würden. Am Ende haben wir beides gemacht. Es war eine spektakuläre Reise, alles war bis ins Detail organisiert, aber dennoch flexibel. Die Organisatoren waren Sportler, das merkt man: Sie verstehen unser Tempo, unsere Witze und unsere Wehwehchen. Das Turnier hatte ein gutes Niveau, aber keinen Stress. Wir haben Teams aus ganz Europa kennengelernt und am Ende mit ihnen in einem Weinkeller am Meer getanzt. Ein Traum! Wir fragen schon nach der Ausgabe im nächsten Jahr. Hoffentlich können wir mit der gleichen Truppe wiederkommen.",
+  "experience_hockey_male_name": "Jeroen V., erfahrener Torwart des Amsterdam HC",
+  "experience_hockey_female_team": "London Ladies HC",
+  "experience_hockey_female_sport": "Damen-Hockey",
+  "experience_hockey_female_country": "Vereinigtes Königreich",
+  "experience_hockey_female_story": "Was hatten wir für einen Spaß! Es war eine Mischung aus Wettkampf, Sightseeing und Lachen zu jeder Zeit. Wir hatten spannende, aber sehr unterhaltsame Spiele, und abseits des Feldes war die Betreuung tadellos. Alles, was man braucht, wenn man mit einer Gruppe von Frauen über 40 reist: gutes Essen, bequeme Betten und ein Plan, um am Ende des Tages anzustoßen. Es wurde von Leuten organisiert, die unsere Sprache sprechen (die des Sports, natürlich). Wir planen schon neue Trikots... denn wir kommen bestimmt wieder. Danke, dass ihr uns gleichzeitig als Spielerinnen, Freundinnen und Reisende behandelt habt!",
+  "experience_hockey_female_name": "Sophie M., London Ladies HC",
+  "counters_teamsTrustedUs": "Teams, die uns vertraut haben",
   "counters_playersImpacted": "Beeinflusste Spieler",
   "counters_queriesAnswered": "Beantwortete Anfragen",
-  "counters_countriesReached": "Erreichte Länder"
-  }
+  "counters_countriesReached": "Erreichte Länder",
+  "contact_tournament_message": "Hallo, ich möchte mehr Informationen über das Turnier \"{{tournament}}\" haben. Danke!",
+  "upcoming_tournaments_title": "Kommende Turniere",
+  "upcoming_tournaments_description": "Wir organisieren die folgenden Turniere in den nächsten Monaten. Wenn Sie daran interessiert sind, teilzunehmen, kontaktieren Sie uns bitte.",
+  "trusted_teams_title": "Teams, die uns vertraut haben",
+  "trusted_teams_title_1": "Hockey Club Valencia",
+  "trusted_teams_title_2": "Valencia Femenino",
+  "trusted_teams_title_3": "Veteranos Rugby",
+  "trusted_teams_description_1": "Männliche Mannschaft, nationale Liga.",
+  "trusted_teams_description_2": "Weibliche Mannschaft, regionale Meister.",
+  "trusted_teams_description_3": "Senior-Mannschaft, internationale Freundschaftsspiele.",
+  "upcoming_tournaments_title_1": "Paella Cup 2025 - Hockey",
+  "upcoming_tournaments_description_1": "Im Juni 2026 in Valencia, das Turnier ist bekannt für seine perfekte Kombination aus Sport und Kultur, während man das spanische Wetter genießt.",
+  "upcoming_tournaments_title_2": "Mal de Altura 2026 - Rugby",
+  "upcoming_tournaments_description_2": "Letzte Woche im Mai 2026 in Alcala de la Selva, ein ganzes Dorf in der valencianischen Gemeinschaft, um Rugby mit Freunden zu genießen, gute Musik und eine große Begrüßungs- und Abschiedsfest.",
+  "upcoming_tournaments_title_3": "EUROPEAN GOLDEN OLDIES RUGBY FESTIVAL",
+  "upcoming_tournaments_description_3": "Vom 11. bis 14. Juni, in Valencia, Spanien.",
+  "more_information": "Mehr Informationen",
+  "tournament_paella_title": "Paella Cup 2026",
+  "tournament_paella_description": "Internationales Hockey-Veteranenturnier in Valencia. Vom 12. bis 14. Juni 2025 organisiert Mister Valencia die zehnte Ausgabe des Paella Cup. Dieses renommierte Turnier ist bekannt für seine perfekte Mischung aus Sport, Kultur und gesellschaftlichen Aktivitäten – alles begleitet vom angenehmen spanischen Klima, das eine einzigartige und unvergessliche Atmosphäre schafft.",
+  "tournament_paella_preregister": "Melde dein Hockeyteam für ein sonniges Turnier im Sommer 2026 in Valencia über das Formular an und wir werden dich für weitere Details kontaktieren.",
+  "tournament_paella_signup_btn": "Anmelden",
+  "tournament_paella_expect_title": "Was dich erwartet",
+  "tournament_paella_expect_1": "Hockeyspiele",
+  "tournament_paella_expect_2": "Willkommensparty",
+  "tournament_paella_expect_3": "Abschiedsparty",
+  "tournament_paella_program_title": "Programm",
+  "tournament_paella_program_arrival": "Ankunft",
+  "tournament_paella_program_arrival_desc": "Check-in und Empfang der Teams",
+  "tournament_paella_program_wed": "Mittwoch",
+  "tournament_paella_program_wed_desc": "Hockeyspiele",
+  "tournament_paella_program_fri": "Freitag",
+  "tournament_paella_program_fri_desc": "Halbfinale",
+  "tournament_paella_program_sat": "Samstag",
+  "tournament_paella_program_sat_desc": "Finale und Siegerehrung",
+  "tournament_paella_program_sun": "Sonntag",
+  "tournament_paella_program_sun_desc": "Freier Tag und Abreise",
+  "tournament_paella_program_mon": "Montag",
+  "tournament_paella_program_mon_desc": "Abreise der Teams",
+  "tournament_egorf_title": "Offizielles Programm EGORF 2026",
+  "tournament_egorf_description": "Das spannendste Rugbyturnier in Valencia.",
+  "tournament_egorf_preregister": "Melde dein Rugbyteam für ein sonniges Turnier im Sommer 2026 in Valencia über das Formular an und wir werden dich für weitere Details kontaktieren.",
+  "tournament_egorf_signup_btn": "Anmelden",
+  "tournament_egorf_expect_title": "Was dich erwartet",
+  "tournament_egorf_expect_1": "Intensive Rugbyspiele",
+  "tournament_egorf_expect_2": "Willkommenszeremonie im Umbracle",
+  "tournament_egorf_expect_3": "Abschlusszeremonie in der Stadt der Künste",
+  "tournament_egorf_program_title": "Programm",
+  "tournament_egorf_program_thu": "Donnerstag, 11. Juni",
+  "tournament_egorf_program_thu_desc": "📌 Ankunft der Teams – Ganztägig\n📌 Willkommenszeremonie – 20:00 Uhr | Umbracle Terrasse 🌟",
+  "tournament_egorf_program_fri": "Freitag, 12. Juni",
+  "tournament_egorf_program_fri_desc": "🏉 Spieltag – Ab 9:00 Uhr",
+  "tournament_egorf_program_sat": "Samstag, 13. Juni",
+  "tournament_egorf_program_sat_desc": "🌴 Freier Tag",
+  "tournament_egorf_program_sun": "Sonntag, 14. Juni",
+  "tournament_egorf_program_sun_desc": "🏉 Spieltag – Ab 9:00 Uhr\n🏆 Abschlusszeremonie – 20:00 Uhr | Stadt der Künste und Wissenschaften 🎇",
+  "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
+  "tournament_mal_altura_description": "Letzte Maiwoche 2025 in Alcala de la Selva, ein ganzes Dorf in der spanischen Region, um Rugby mit Freunden, guter Musik und einer großen Willkommens- und Abschiedsparty zu genießen.",
+  "tournament_mal_altura_preregister": "Melde jetzt dein Rugby-Team für das sonnige Turnier in Alcala de la Selva an. Fülle das Formular aus und wir kontaktieren dich mit weiteren Details.",
+  "tournament_mal_altura_signup_btn": "Anmelden",
+  "tournament_mal_altura_expect_title": "Was dich erwartet",
+  "tournament_mal_altura_expect_1": "Rugby in einem Bergdorf",
+  "tournament_mal_altura_expect_2": "Traditionelle Willkommensfeier",
+  "tournament_mal_altura_expect_3": "Große Abschiedsparty",
+  "tournament_mal_altura_program_title": "Programm",
+  "tournament_mal_altura_program_day1": "Freitag – Ankunft",
+  "tournament_mal_altura_program_day1_desc": "Ankunft der Teams und Willkommensfeier",
+  "tournament_mal_altura_program_day2": "Samstag – Wettbewerb",
+  "tournament_mal_altura_program_day2_desc": "Rugby-Spiele den ganzen Tag, 7vs7-Modus auf dem Halbfeld, eine Halbzeit 15 Minuten, die andere 10 Minuten",
+  "tournament_mal_altura_program_day3": "Sonntag – Abreise",
+  "tournament_mal_altura_program_day3_desc": "Abreise der Teams",
+  "back": "Zurück"
+}
