--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -84,10 +84,63 @@
   "trusted_teams_description_1": "Masculine team, national league.",
   "trusted_teams_description_2": "Female team, regional champions.",
   "trusted_teams_description_3": "Senior team, international friendly matches.",
-  "upcoming_tournaments_title_1": "Valencia Hockey Cup",
-  "upcoming_tournaments_description_1": "From 10 to 12 May, Valencia. Category sub-18 and absolute.",
-  "upcoming_tournaments_title_2": "Rugby Summer Fest",
-  "upcoming_tournaments_description_2": "From 20 to 22 June, playa de la Malvarrosa.",
-  "upcoming_tournaments_title_3": "International Female Tournament",
-  "upcoming_tournaments_description_3": "From 5 to 7 July, municipal polideportive."
+  "upcoming_tournaments_title_1": "Paella Cup 2025 - Hockey",
+  "upcoming_tournaments_description_1": "In June 2026 in Valencia, the tournament is known for its perfect combination of sport and culture, while enjoying the Spanish weather.",
+  "upcoming_tournaments_title_2": "Mal de Altura 2026 - Rugby",
+  "upcoming_tournaments_description_2": "Last week in May 2026 in Alcala de la Selva, a whole town in the Valencian Community, to enjoy rugby with friends, good music, and a great welcome and farewell party.",
+  "upcoming_tournaments_title_3": "EUROPEAN GOLDEN OLDIES RUGBY FESTIVAL",
+  "upcoming_tournaments_description_3": "From 11 to 14 June, in Valencia, Spain.",
+  "more_information": "More information",
+  "tournament_paella_title": "Paella Cup 2026",
+  "tournament_paella_description": "International Veteran Hockey Tournament in Valencia. From 12 to 14 June 2025, Mister Valencia will organize the tenth edition of the Paella Cup. This prestigious tournament is known for its perfect blend of sport, culture, and social activities, all accompanied by the pleasant Spanish weather that creates a unique and unforgettable atmosphere.",
+  "tournament_paella_preregister": "Pre-register your hockey team for a sunny tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
+  "tournament_paella_signup_btn": "Sign up",
+  "tournament_paella_expect_title": "What to expect",
+  "tournament_paella_expect_1": "Hockey matches",
+  "tournament_paella_expect_2": "Welcome party",
+  "tournament_paella_expect_3": "Farewell party",
+  "tournament_paella_program_title": "Program",
+  "tournament_paella_program_arrival": "Arrival",
+  "tournament_paella_program_arrival_desc": "Check-in and reception of teams",
+  "tournament_paella_program_wed": "Wednesday",
+  "tournament_paella_program_wed_desc": "Hockey matches",
+  "tournament_paella_program_fri": "Friday",
+  "tournament_paella_program_fri_desc": "Semifinals",
+  "tournament_paella_program_sat": "Saturday",
+  "tournament_paella_program_sat_desc": "Final and award ceremony",
+  "tournament_paella_program_sun": "Sunday",
+  "tournament_paella_program_sun_desc": "Free day and departure",
+  "tournament_paella_program_mon": "Monday",
+  "tournament_paella_program_mon_desc": "Departure of teams",
+  "tournament_egorf_title": "EGORF 2026 Official Program",
+  "tournament_egorf_description": "The most exciting rugby tournament in Valencia",
+  "tournament_egorf_preregister": "Pre-register your hockey team for a sunny tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
+  "tournament_egorf_signup_btn": "Sign up",
+  "tournament_egorf_expect_title": "What to expect",
+  "tournament_egorf_expect_1": "Intense rugby matches",
+  "tournament_egorf_expect_2": "Welcome ceremony at Umbracle",
+  "tournament_egorf_expect_3": "Closing ceremony at City of Arts",
+  "tournament_egorf_program_title": "Program",
+  "tournament_egorf_program_thu": "Thursday, June 11th",
+  "tournament_egorf_program_thu_desc": "📌 Team arrival – All day\n📌 Welcome Ceremony – 20:00h | Umbracle Terrace 🌟",
+  "tournament_egorf_program_fri": "Friday, June 12th",
+  "tournament_egorf_program_fri_desc": "🏉 Match Day – From 9:00h",
+  "tournament_egorf_program_sat": "Saturday, June 13th",
+  "tournament_egorf_program_sat_desc": "🌴 Free Day",
+  "tournament_egorf_program_sun": "Sunday, June 14th",
+  "tournament_egorf_program_sun_desc": "🏉 Match Day – From 9:00h\n🏆 Closing Ceremony – 20:00h | City of Arts and Sciences 🎇",
+  "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
+  "tournament_mal_altura_description": "Last week in May 2026 in Alcala de la Selva, a whole town in the Valencian Community, to enjoy rugby with friends, good music, and a great welcome and farewell party.",
+  "tournament_mal_altura_preregister": "Pre-register your rugby team for a sunny Valencia tournament in the summer of 2025 via the form and we will contact you for further details.",
+  "tournament_mal_altura_signup_btn": "Sign up",
+  "tournament_mal_altura_expect_title": "What to expect",
+  "tournament_mal_altura_expect_1": "Rugby matches",
+  "tournament_mal_altura_expect_2": "Welcome party",
+  "tournament_mal_altura_expect_3": "Farewell party",
+  "tournament_mal_altura_program_title": "Program",
+  "tournament_mal_altura_program_day1": "Day 1, arrival to the town, welcome party",
+  "tournament_mal_altura_program_day1_desc": "Arrival of teams, presentation of the tournament and welcome party",
+  "tournament_mal_altura_program_day2": "Day 2, rugby matches",
+  "tournament_mal_altura_program_day2_desc": "Rugby matches during the whole day, in 7vs7 mode on the field, a 15-minute and a 10-minute half",
+  "back": "Back"
 }
