--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -74,7 +74,7 @@
   "counters_playersImpacted": "Jugadores impactados",
   "counters_queriesAnswered": "Consultas respondidas",
   "counters_countriesReached": "Países alcanzados",
-  "contact_tournament_message": "Hola, quisiera más información sobre el torneo \"{{tournament}}\". ¡Gracias!",
+  "contact_tournament_message": "Hola, me interesa inscribirme en el torneo \"{{tournament}}\". ¿Podrían enviarme más información sobre fechas, precios y requisitos? ¡Gracias!",
   "upcoming_tournaments_title": "Próximos torneos",
   "upcoming_tournaments_description": "Organizamos los siguientes torneos en los próximos meses. Si estás interesado en participar, contáctanos.",
   "trusted_teams_title": "Equipos que confían en nosotros",
@@ -84,10 +84,63 @@
   "trusted_teams_description_1": "Equipo masculino, liga nacional.",
   "trusted_teams_description_2": "Equipo femenino, campeonas regionales.",
   "trusted_teams_description_3": "Equipo senior, amistosos internacionales.",
-  "upcoming_tournaments_title_1": "Torneo de Hockey Valencia",
-  "upcoming_tournaments_description_1": "Del 10 al 12 de mayo, Valencia. Categoría sub-18 y absoluta.",
-  "upcoming_tournaments_title_2": "Festival de Rugby Verano",
-  "upcoming_tournaments_description_2": "Del 20 al 22 de junio, playa de la Malvarrosa.",
-  "upcoming_tournaments_title_3": "Torneo Internacional Femenino",
-  "upcoming_tournaments_description_3": "Del 5 al 7 de julio, polideportivo municipal."
+  "upcoming_tournaments_title_1": "Paella cup 2025 - Hockey",
+  "upcoming_tournaments_description_1": "En junio de 2026 en Valencia el torneo es famoso por su perfecta conbinacion entre sport cultural y diversion disfrutando del clima español. ",
+  "upcoming_tournaments_title_2": "Mal de Altura 2026 - Rugby",
+  "upcoming_tournaments_description_2": "Ultima semana de Mayo del 2026 en Alcala de la selva, un pueblo entero de la comarca de española , para disfrutar del rugby con amigos, buena musica, y una gran fiesta de bienvenida y de despedida.",
+  "upcoming_tournaments_title_3": "EGORF 2026 - Rugby",
+  "upcoming_tournaments_description_3": "Del 11 al 14 de Junio, en Valencia, España.",
+  "more_information": "Más información",
+  "tournament_paella_title": "Paella Cup 2026",
+  "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
+  "tournament_paella_preregister": "Preinscribe a tu equipo de hockey para un soleado torneo en Valencia en el verano de 2026 a través del formulario y nos pondremos en contacto contigo para más detalles.",
+  "tournament_paella_signup_btn": "Inscribirme",
+  "tournament_paella_expect_title": "Lo que puedes esperar",
+  "tournament_paella_expect_1": "Partidos de hockey de alto nivel",
+  "tournament_paella_expect_2": "Fiesta de bienvenida con paella",
+  "tournament_paella_expect_3": "Fiesta de despedida con premios",
+  "tournament_paella_program_title": "Programa",
+  "tournament_paella_program_arrival": "Llegada",
+  "tournament_paella_program_arrival_desc": "Check-in y recepción de equipos",
+  "tournament_paella_program_wed": "Miércoles",
+  "tournament_paella_program_wed_desc": "Partidos de clasificación",
+  "tournament_paella_program_fri": "Viernes",
+  "tournament_paella_program_fri_desc": "Semifinales",
+  "tournament_paella_program_sat": "Sábado",
+  "tournament_paella_program_sat_desc": "Final y entrega de premios",
+  "tournament_paella_program_sun": "Domingo",
+  "tournament_paella_program_sun_desc": "Día libre y despedida",
+  "tournament_paella_program_mon": "Lunes",
+  "tournament_paella_program_mon_desc": "Regreso de equipos",
+  "tournament_egorf_title": "EGORF 2026 Official Program",
+  "tournament_egorf_description": "The most exciting rugby tournament in Valencia",
+  "tournament_egorf_preregister": "Pre-register your hockey team for a sunny tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
+  "tournament_egorf_signup_btn": "Sign up",
+  "tournament_egorf_expect_title": "What to expect",
+  "tournament_egorf_expect_1": "Intense rugby matches",
+  "tournament_egorf_expect_2": "Welcome ceremony at Umbracle",
+  "tournament_egorf_expect_3": "Closing ceremony at City of Arts",
+  "tournament_egorf_program_title": "Program",
+  "tournament_egorf_program_thu": "Thursday, June 11th",
+  "tournament_egorf_program_thu_desc": "📌 Team arrival – All day\n📌 Welcome Ceremony – 20:00h | Umbracle Terrace 🌟",
+  "tournament_egorf_program_fri": "Friday, June 12th",
+  "tournament_egorf_program_fri_desc": "🏉 Match Day – From 9:00h",
+  "tournament_egorf_program_sat": "Saturday, June 13th",
+  "tournament_egorf_program_sat_desc": "🌴 Free Day",
+  "tournament_egorf_program_sun": "Sunday, June 14th",
+  "tournament_egorf_program_sun_desc": "🏉 Match Day – From 9:00h\n🏆 Closing Ceremony – 20:00h | City of Arts and Sciences 🎇",
+  "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
+  "tournament_mal_altura_description": "Ultima semana de Mayo del 2025 en Alcala de la selva, un pueblo entero de la comarca española, para disfrutar del rugby con amigos, buena música, y una gran fiesta de bienvenida y de despedida.",
+  "tournament_mal_altura_preregister": "Preinscríbete ahora",
+  "tournament_mal_altura_signup_btn": "Inscribirme",
+  "tournament_mal_altura_expect_title": "Lo que puedes esperar",
+  "tournament_mal_altura_expect_1": "Rugby en un pueblo de montaña",
+  "tournament_mal_altura_expect_2": "Fiesta de bienvenida tradicional",
+  "tournament_mal_altura_expect_3": "Gran fiesta de despedida",
+  "tournament_mal_altura_program_title": "Programa",
+  "tournament_mal_altura_program_day1": "Dia 1, arribo al pueblo.",
+  "tournament_mal_altura_program_day1_desc": "Llegada de equipos, presentación del torneo y fiesta de bienvenida",
+  "tournament_mal_altura_program_day2": "Dia 2 dia de partidos.",
+  "tournament_mal_altura_program_day2_desc": "Partidos de rugby durante todo el día, en modalidad 7vs7 en medio campo una parte de 15 minutos y otra de 10 minutos",
+  "back": "Volver"
 }
