--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -84,10 +84,65 @@
   "trusted_teams_description_1": "Équipe masculine, ligue nationale.",
   "trusted_teams_description_2": "Équipe féminine, championnes régionales.",
   "trusted_teams_description_3": "Équipe senior, matchs amicaux internationaux.",
-  "upcoming_tournaments_title_1": "Torneo de Hockey Valencia",
-  "upcoming_tournaments_description_1": "Del 10 al 12 de mayo, Valencia. Categoría sub-18 y absoluta.",
-  "upcoming_tournaments_title_2": "Festival de Rugby Verano",
-  "upcoming_tournaments_description_2": "Del 20 al 22 de junio, playa de la Malvarrosa.",
-  "upcoming_tournaments_title_3": "Torneo Internacional Femenino",
-  "upcoming_tournaments_description_3": "Del 5 al 7 de julio, polideportivo municipal."
+  "upcoming_tournaments_title_1": "Paella Cup 2025 - Hockey",
+  "upcoming_tournaments_description_1": "En juin 2026 à Valencia, le tournoi est connu pour sa combinaison parfaite entre sport et culture, tout en profitant du temps espagnol.",
+  "upcoming_tournaments_title_2": "Mal de Altura 2026 - Rugby",
+  "upcoming_tournaments_description_2": "Dernière semaine en mai 2026 à Alcala de la Selva, un village entier dans la Communauté valencienne, pour profiter du rugby avec des amis, de la bonne musique et d'une grande fête de bienvenue et de départ.",
+  "upcoming_tournaments_title_3": "EUROPEAN GOLDEN OLDIES RUGBY FESTIVAL 2026",
+  "upcoming_tournaments_description_3": "Du 11 au 14 juin, à Valencia, en Espagne.",
+  "more_information": "Plus d'informations",
+  "tournament_paella_title": "Paella Cup 2026",
+  "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
+  "tournament_paella_preregister": "Pré-inscrivez votre équipe de hockey pour un tournoi ensoleillé à Valencia en juillet 2026 via le formulaire et nous vous contacterons pour plus de détails.",
+  "tournament_paella_signup_btn": "S'inscrire",
+  "tournament_paella_expect_title": "Ce que vous pouvez attendre",
+  "tournament_paella_expect_1": "Matches de hockey",
+  "tournament_paella_expect_2": "Fête de bienvenue",
+  "tournament_paella_expect_3": "Fête de départ",
+  "tournament_paella_program_title": "Programme",
+  "tournament_paella_program_arrival": "Arrivée",
+  "tournament_paella_program_arrival_desc": "Check-in et réception des équipes",
+  "tournament_paella_program_wed": "Mercredi",
+  "tournament_paella_program_wed_desc": "Matches de hockey",
+  "tournament_paella_program_fri": "Vendredi",
+  "tournament_paella_program_fri_desc": "Demi-finales",
+  "tournament_paella_program_sat": "Samedi",
+  "tournament_paella_program_sat_desc": "Finale et cérémonie de remise des prix",
+  "tournament_paella_program_sun": "Dimanche",
+  "tournament_paella_program_sun_desc": "Journée libre et départ",
+  "tournament_paella_program_mon": "Lundi",
+  "tournament_paella_program_mon_desc": "Départ des équipes",
+  "tournament_egorf_title": "Programme officiel du EGORF 2026",
+  "tournament_egorf_description": "Le tournoi de rugby le plus excitant de Valencia",
+  "tournament_egorf_preregister": "Pré-inscrivez votre équipe de hockey pour un tournoi ensoleillé à Valencia en juillet 2025 via le formulaire et nous vous contacterons pour plus de détails.",
+  "tournament_egorf_signup_btn": "S'inscrire",
+  "tournament_egorf_expect_title": "Ce que vous pouvez attendre",
+  "tournament_egorf_expect_1": "Matches de rugby",
+  "tournament_egorf_expect_2": "Fête de bienvenue",
+  "tournament_egorf_expect_3": "Fête de départ",
+  "tournament_egorf_program_title": "Programme",
+  "tournament_egorf_program_thu": "Jeudi 11 de Juin",
+  "tournament_egorf_program_thu_desc": "📌 Arrivée des équipes – Toute la journée\n📌 Cérémonie de Bienvenue – 20:00h | Umbracle Terraza 🌟",
+  "tournament_egorf_program_fri": "Vendredi 12 de Juin",
+  "tournament_egorf_program_fri_desc": "🏉 Jour de match – De 9:00h",
+  "tournament_egorf_program_sat": "Samedi 13 de Juin",
+  "tournament_egorf_program_sat_desc": "🌴 Jour libre",
+  "tournament_egorf_program_sun": "Dimanche 14 de Juin",
+  "tournament_egorf_program_sun_desc": "🏉 Jour de match – De 9:00h\n🏆 Cérémonie de clôture – 20:00h | Ciudad de las Artes y las Ciencias 🎇",
+  "tournament_egorf_program_mon": "Lundi 15 de Juin",
+  "tournament_egorf_program_mon_desc": "Départ des équipes",
+  "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
+  "tournament_mal_altura_description": "Dernière semaine en mai 2026 à Alcala de la Selva, un village entier dans la Communauté valencienne, pour profiter du rugby avec des amis, de la bonne musique et d'une grande fête de bienvenue et de départ.",
+  "tournament_mal_altura_preregister": "Pré-inscrivez votre équipe de hockey pour un tournoi ensoleillé à Valencia en juillet 2025 via le formulaire et nous vous contacterons pour plus de détails.",
+  "tournament_mal_altura_signup_btn": "S'inscrire",
+  "tournament_mal_altura_expect_title": "Ce que vous pouvez attendre",
+  "tournament_mal_altura_expect_1": "Matches de rugby",
+  "tournament_mal_altura_expect_2": "Fête de bienvenue",
+  "tournament_mal_altura_expect_3": "Fête de départ",
+  "tournament_mal_altura_program_title": "Programme",
+  "tournament_mal_altura_program_day1": "Jour 1, arrivée à la ville, fête de bienvenue",
+  "tournament_mal_altura_program_day1_desc": "Arrivée des équipes, présentation du tournoi et fête de bienvenue",
+  "tournament_mal_altura_program_day2": "Jour 2, journée de matchs",
+  "tournament_mal_altura_program_day2_desc": "Matches de rugby pendant toute la journée, en mode 7vs7 sur le terrain, une partie de 15 minutes et une partie de 10 minutes",
+  "back": "Retour"
 }
