--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -81,10 +81,64 @@
   "trusted_teams_description_1": "Squadra maschile, liga nazionale.",
   "trusted_teams_description_2": "Squadra femminile, campiones regionali.",
   "trusted_teams_description_3": "Squadra senior, partite amichevoli internazionali.",
-  "upcoming_tournaments_title_1": "Torneo di Hockey Valencia",
-  "upcoming_tournaments_description_1": "Dal 10 al 12 di maggio, Valencia. Categoria sub-18 e assoluta.",
-  "upcoming_tournaments_title_2": "Festival di Rugby Verano",
-  "upcoming_tournaments_description_2": "Dal 20 al 22 di giugno, playa de la Malvarrosa.",
-  "upcoming_tournaments_title_3": "Torneo Internazionale Femminile",
-  "upcoming_tournaments_description_3": "Dal 5 al 7 di luglio, polideportivo municipale."
+  "upcoming_tournaments_title_1": "Paella Cup 2025 - Hockey",
+  "upcoming_tournaments_description_1": "In giugno 2026 a Valencia, il torneo è noto per la sua perfetta combinazione tra sport e cultura, mentre si godono le condizioni meteo spagnole.",
+  "upcoming_tournaments_title_2": "Mal de Altura 2026 - Rugby",
+  "upcoming_tournaments_description_2": "Ultima settimana di maggio 2026 a Alcala de la Selva, un intero villaggio nella Comunità Valenciana, per godersi il rugby con amici, buona musica e una grande festa di benvenuto e di partenza.",
+  "upcoming_tournaments_title_3": "EUROPEAN GOLDEN OLDIES RUGBY FESTIVAL",
+  "upcoming_tournaments_description_3": "Dal 11 al 14 di giugno, a Valencia, Spagna.",
+  "more_information": "Maggiori informazioni",
+  "tournament_paella_title": "Paella Cup 2026",
+  "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
+  "tournament_paella_preregister": "Preinscrivi il tuo team di hockey per un torneo soleggiato a Valencia nel 2026 attraverso il modulo e ti risponderemo per maggiori dettagli.",
+  "tournament_paella_signup_btn": "Iscriviti",
+  "tournament_paella_expect_title": "Cosa puoi aspettarti",
+  "tournament_paella_expect_1": "Partite di hockey",
+  "tournament_paella_expect_2": "Festa di benvenuto",
+  "tournament_paella_expect_3": "Festa di partenza",
+  "tournament_paella_program_title": "Programma",
+  "tournament_paella_program_arrival": "Arrivo",
+  "tournament_paella_program_arrival_desc": "Check-in e ricezione delle squadre",
+  "tournament_paella_program_wed": "Mercoledì",
+  "tournament_paella_program_wed_desc": "Partite di hockey",
+  "tournament_paella_program_fri": "Venerdì",
+  "tournament_paella_program_fri_desc": "Semifinali",
+  "tournament_paella_program_sat": "Sabato",
+  "tournament_paella_program_sat_desc": "Finale e cerimonia di premiazione",
+  "tournament_paella_program_sun": "Domenica",
+  "tournament_paella_program_sun_desc": "Giorno libero e partenza",
+  "tournament_paella_program_mon": "Lunedì",
+  "tournament_paella_program_mon_desc": "Partenza delle squadre",
+  "tournament_egorf_title": "Programma ufficiale del EGORF 2026",
+  "tournament_egorf_description": "Il torneo di rugby più emozionante di Valencia",
+  "tournament_egorf_preregister": "Preinscrivi il tuo team di hockey per un torneo soleggiato a Valencia nel 2026 attraverso il modulo e ti risponderemo per maggiori dettagli.",
+  "tournament_egorf_signup_btn": "Iscriviti",
+  "tournament_egorf_expect_title": "Cosa puoi aspettarti",
+  "tournament_egorf_expect_1": "Partite di rugby",
+  "tournament_egorf_expect_2": "Festa di benvenuto",
+  "tournament_egorf_expect_3": "Festa di partenza",
+  "tournament_egorf_program_title": "Programma",
+  "tournament_egorf_program_thu": "Giovedì 11 di Giugno",
+  "tournament_egorf_program_thu_desc": "📌 Arrivo delle squadre – Tutto il giorno\n📌 Cérémonie de Bienvenue – 20:00h | Umbracle Terraza 🌟",
+  "tournament_egorf_program_fri": "Venerdì 12 di Giugno",
+  "tournament_egorf_program_fri_desc": "🏉 Giorno di partita – Dalle 9:00h",
+  "tournament_egorf_program_sat": "Sabato 13 di Giugno",
+  "tournament_egorf_program_sat_desc": "🌴 Giorno libero",
+  "tournament_egorf_program_sun": "Domenica 14 di Giugno",
+  "tournament_egorf_program_sun_desc": "🏉 Giorno di partita – Dalle 9:00h\n🏆 Cérémonie de clôture – 20:00h | Ciudad de las Artes y las Ciencias 🎇",
+  "tournament_egorf_program_mon": "Lunedì 15 di Giugno",
+  "tournament_egorf_program_mon_desc": "Partenza delle squadre",
+  "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
+  "tournament_mal_altura_description": "Ultima settimana di maggio 2026 a Alcala de la Selva, un intero villaggio nella Comunità Valenciana, per godersi il rugby con amici, buona musica e una grande festa di benvenuto e di partenza.",
+  "tournament_mal_altura_preregister": "Preinscrivi il tuo team di hockey per un torneo soleggiato a Valencia nel 2026 attraverso il modulo e ti risponderemo per maggiori dettagli.",
+  "tournament_mal_altura_signup_btn": "Iscriviti",
+  "tournament_mal_altura_expect_title": "Cosa puoi aspettarti",
+  "tournament_mal_altura_expect_1": "Partite di rugby",
+  "tournament_mal_altura_expect_2": "Festa di benvenuto",
+  "tournament_mal_altura_expect_3": "Festa di partenza",
+  "tournament_mal_altura_program_title": "Programma",
+  "tournament_mal_altura_program_day1": "Giovedì - Arrivo",
+  "tournament_mal_altura_program_day1_desc": "Arrivo delle squadre, presentazione del torneo e festa di benvenuto",
+  "tournament_mal_altura_program_day2": "Venerdì - Competizione",
+  "tournament_mal_altura_program_day2_desc": "Partite di rugby durante tutto il giorno, in modalità 7vs7 sul campo, una parte di 15 minuti e una parte di 10 minuti"
 }
