--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -81,10 +81,65 @@
   "trusted_teams_description_1": "Mannenteam, nationale competitie.",
   "trusted_teams_description_2": "Vrouwenteam, regionale kampioenen.",
   "trusted_teams_description_3": "Seniorteam, internationale vriendschappelijke wedstrijden.",
-  "upcoming_tournaments_title_1": "Torneo de Hockey Valencia",
-  "upcoming_tournaments_description_1": "Del 10 al 12 de mayo, Valencia. Categoría sub-18 y absoluta.",
-  "upcoming_tournaments_title_2": "Festival de Rugby Verano",
-  "upcoming_tournaments_description_2": "Del 20 al 22 de junio, playa de la Malvarrosa.",
-  "upcoming_tournaments_title_3": "Torneo Internacional Femenino",
-  "upcoming_tournaments_description_3": "Del 5 al 7 de julio, polideportivo municipal."
+  "upcoming_tournaments_title_1": "Paella Cup 2025 - Hockey",
+  "upcoming_tournaments_description_1": "In juni 2026 in Valencia, het toernooi is bekend om zijn perfecte combinatie van sport en cultuur, terwijl men het Spaanse weer geniet.",
+  "upcoming_tournaments_title_2": "Mal de Altura 2026 - Rugby",
+  "upcoming_tournaments_description_2": "Laatste week in mei 2026 in Alcala de la Selva, een hele dorp in de Comunité Valenciana, om rugby met vrienden te genieten, goede muziek en een grote welkomst- en afscheidsfeest.",
+  "upcoming_tournaments_title_3": "EUROPEAN GOLDEN OLDIES RUGBY FESTIVAL 2026",
+  "upcoming_tournaments_description_3": "Van 11 tot 14 juni, in Valencia, Spanje.",
+  "more_information": "Meer informatie",
+  "tournament_paella_title": "Paella Cup 2026",
+  "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
+  "tournament_paella_preregister": "Pre-register your hockey team for a sunny tournament in Valencia in summer 2026 through the form and we will contact you for more details.",
+  "tournament_paella_signup_btn": "Sign up",
+  "tournament_paella_expect_title": "What to expect",
+  "tournament_paella_expect_1": "Hockey matches",
+  "tournament_paella_expect_2": "Welcome party",
+  "tournament_paella_expect_3": "Farewell party",
+  "tournament_paella_program_title": "Program",
+  "tournament_paella_program_arrival": "Arrival",
+  "tournament_paella_program_arrival_desc": "Check-in and reception of teams",
+  "tournament_paella_program_wed": "Wednesday",
+  "tournament_paella_program_wed_desc": "Hockey matches",
+  "tournament_paella_program_fri": "Friday",
+  "tournament_paella_program_fri_desc": "Semifinals",
+  "tournament_paella_program_sat": "Saturday",
+  "tournament_paella_program_sat_desc": "Final and award ceremony",
+  "tournament_paella_program_sun": "Sunday",
+  "tournament_paella_program_sun_desc": "Free day and departure",
+  "tournament_paella_program_mon": "Monday",
+  "tournament_paella_program_mon_desc": "Departure of teams",
+  "tournament_egorf_title": "EGORF 2026 Official Program",
+  "tournament_egorf_description": "The most exciting rugby tournament in Valencia",
+  "tournament_egorf_preregister": "Pre-register your hockey team for a sunny Valencia tournament in the summer of 2025 via the form and we will contact you for further details.",
+  "tournament_egorf_signup_btn": "Sign up",
+  "tournament_egorf_expect_title": "What to expect",
+  "tournament_egorf_expect_1": "Intense rugby matches",
+  "tournament_egorf_expect_2": "Welcome ceremony at Umbracle",
+  "tournament_egorf_expect_3": "Closing ceremony at City of Arts",
+  "tournament_egorf_program_title": "Program",
+  "tournament_egorf_program_thu": "Thursday",
+  "tournament_egorf_program_thu_desc": "📌 Team arrival – All day\n📌 Welcome Ceremony – 20:00h | Umbracle Terrace 🌟",
+  "tournament_egorf_program_fri": "Friday",
+  "tournament_egorf_program_fri_desc": "🏉 Match Day – From 9:00h",
+  "tournament_egorf_program_sat": "Saturday",
+  "tournament_egorf_program_sat_desc": "🌴 Free Day",
+  "tournament_egorf_program_sun": "Sunday",
+  "tournament_egorf_program_sun_desc": "🏉 Match Day – From 9:00h\n🏆 Closing Ceremony – 20:00h | City of Arts and Sciences 🎇",
+  "tournament_egorf_program_mon": "Monday",
+  "tournament_egorf_program_mon_desc": "Departure of teams",
+  "back": "Back",
+  "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
+  "tournament_mal_altura_description": "Laatste week in mei 2026 in Alcala de la Selva, een hele dorp in de Comunité Valenciana, om rugby met vrienden te genieten, goede muziek en een grote welkomst- en afscheidsfeest.",
+  "tournament_mal_altura_preregister": "Pre-register your rugby team for a sunny Valencia tournament in the summer of 2025 via the form and we will contact you for further details.",
+  "tournament_mal_altura_signup_btn": "Sign up",
+  "tournament_mal_altura_expect_title": "What to expect",
+  "tournament_mal_altura_expect_1": "Rugby matches",
+  "tournament_mal_altura_expect_2": "Welcome party",
+  "tournament_mal_altura_expect_3": "Farewell party",
+  "tournament_mal_altura_program_title": "Program",
+  "tournament_mal_altura_program_day1": "Donderdag - Arrival",
+  "tournament_mal_altura_program_day1_desc": "Arrival of teams, presentation of the tournament and welcome party",
+  "tournament_mal_altura_program_day2": "Vrijdag - Competition",
+  "tournament_mal_altura_program_day2_desc": "Rugby matches during the whole day, in 7vs7 mode on the field, a 15-minute and a 10-minute half"
 }
