--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -84,10 +84,65 @@
     "trusted_teams_description_1": "Equipa masculina, liga nacional.",
     "trusted_teams_description_2": "Equipa feminina, campeãs regionais.",
     "trusted_teams_description_3": "Equipa senior, amistosos internacionais.",
-    "upcoming_tournaments_title_1": "Torneo de Hockey Valencia",
-    "upcoming_tournaments_description_1": "Del 10 al 12 de mayo, Valencia. Categoría sub-18 y absoluta.",
-    "upcoming_tournaments_title_2": "Festival de Rugby Verano",
-    "upcoming_tournaments_description_2": "Del 20 al 22 de junio, playa de la Malvarrosa.",
-    "upcoming_tournaments_title_3": "Torneo Internacional Femenino",
-    "upcoming_tournaments_description_3": "Del 5 al 7 de julio, polideportivo municipal."
+    "upcoming_tournaments_title_1": "Paella Cup 2025 - Hockey",
+    "upcoming_tournaments_description_1": "Em junho de 2026 em Valencia, o torneio é conhecido por sua combinação perfeita entre esporte e cultura, enquanto se aproveita do tempo espanhol.",
+    "upcoming_tournaments_title_2": "Mal de Altura 2026 - Rugby",
+    "upcoming_tournaments_description_2": "Última semana em maio de 2026 em Alcala de la Selva, um povoado inteiro na Comunidade Valenciana, para aproveitar o rugby com amigos, boa música e uma grande festa de boas-vindas e despedida.",
+    "upcoming_tournaments_title_3": "EUROPEAN GOLDEN OLDIES RUGBY FESTIVAL",
+    "upcoming_tournaments_description_3": "De 11 a 14 de junho, em Valencia, Espanha.",
+    "more_information": "Mais informações",
+    "tournament_paella_title": "Paella Cup 2026",
+    "tournament_paella_description": "Torneo Internacional de Hockey Veteranos en Valencia. Del 12 al 14 de junio de 2025, Mister Valencia organizará la décima edición de la Paella Cup. Este prestigioso torneo es reconocido por su perfecta mezcla de deporte, cultura y actividades sociales, todo ello acompañado del agradable clima español que crea un ambiente único e inolvidable.",
+    "tournament_paella_preregister": "Pré-inscreva seu time de hóquei para um torneio soleado em Valencia no verão de 2026 através do formulário e nós entraremos em contato com você para mais detalhes.",
+    "tournament_paella_signup_btn": "Inscreva-se",
+    "tournament_paella_expect_title": "O que você pode esperar",
+    "tournament_paella_expect_1": "Partidas de hóquei",
+    "tournament_paella_expect_2": "Festa de boas-vindas",
+    "tournament_paella_expect_3": "Festa de despedida",
+    "tournament_paella_program_title": "Programa",
+    "tournament_paella_program_arrival": "Chegada",
+    "tournament_paella_program_arrival_desc": "Check-in e recepção de equipes",
+    "tournament_paella_program_wed": "Quarta-feira",
+    "tournament_paella_program_wed_desc": "Partidas de hóquei",
+    "tournament_paella_program_fri": "Sexta-feira",
+    "tournament_paella_program_fri_desc": "Semifinais",
+    "tournament_paella_program_sat": "Sábado",
+    "tournament_paella_program_sat_desc": "Final e cerimônia de premiação",
+    "tournament_paella_program_sun": "Domingo",
+    "tournament_paella_program_sun_desc": "Dia livre e despedida",
+    "tournament_paella_program_mon": "Segunda-feira",
+    "tournament_paella_program_mon_desc": "Retorno de equipes",
+    "tournament_egorf_title": "Programa Oficial do EGORF 2026",
+    "tournament_egorf_description": "O torneio de rugby mais emocionante de Valencia",
+    "tournament_egorf_preregister": "Pré-inscreva seu time de hóquei para um torneio soleado em Valencia no verão de 2026 através do formulário e nós entraremos em contato com você para mais detalhes.",
+    "tournament_egorf_signup_btn": "Inscreva-se",
+    "tournament_egorf_expect_title": "O que você pode esperar",
+    "tournament_egorf_expect_1": "Partidas de rugby intensas",
+    "tournament_egorf_expect_2": "Cerimônia de boas-vindas no Umbracle",
+    "tournament_egorf_expect_3": "Cerimônia de encerramento na Cidade das Artes",
+    "tournament_egorf_program_title": "Programa",
+    "tournament_egorf_program_thu": "Quarta-feira",
+    "tournament_egorf_program_thu_desc": "📌 Chegada de equipes – Todo o dia\n📌 Cerimônia de boas-vindas – 20:00h | Terreça do Umbracle 🌟",
+    "tournament_egorf_program_fri": "Sexta-feira",
+    "tournament_egorf_program_fri_desc": "🏉 Dia de partidas – Das 9:00h",
+    "tournament_egorf_program_sat": "Sábado",
+    "tournament_egorf_program_sat_desc": "🌴 Dia livre",
+    "tournament_egorf_program_sun": "Domingo",
+    "tournament_egorf_program_sun_desc": "🏉 Dia de partidas – Das 9:00h\n🏆 Cerimônia de encerramento – 20:00h | Cidade das Artes e Ciências 🎇",
+    "tournament_egorf_program_mon": "Segunda-feira",
+    "tournament_egorf_program_mon_desc": "Retorno de equipes",
+    "tournament_mal_altura_title": "Mal de Altura 2025 - Rugby",
+    "tournament_mal_altura_description": "Última semana em maio de 2026 em Alcala de la Selva, um povoado inteiro na Comunidade Valenciana, para aproveitar o rugby com amigos, boa música e uma grande festa de boas-vindas e despedida.",
+    "tournament_mal_altura_preregister": "Pré-inscreva seu time de hóquei para um torneio soleado em Valencia no verão de 2025 através do formulário e nós entraremos em contato com você para mais detalhes.",
+    "tournament_mal_altura_signup_btn": "Inscreva-se",
+    "tournament_mal_altura_expect_title": "O que você pode esperar",
+    "tournament_mal_altura_expect_1": "Partidas de rugby",
+    "tournament_mal_altura_expect_2": "Festa de boas-vindas",
+    "tournament_mal_altura_expect_3": "Festa de despedida",
+    "tournament_mal_altura_program_title": "Programa",  
+    "tournament_mal_altura_program_day1": "Dia 1, chegada ao povoado, festa de boas-vindas",
+    "tournament_mal_altura_program_day1_desc": "Chegada de equipos, apresentação do torneio e festa de boas-vindas",
+    "tournament_mal_altura_program_day2": "Dia 2, partidas de rugby",
+    "tournament_mal_altura_program_day2_desc": "Partidas de rugby durante todo o dia, em modalidade 7vs7 no campo, uma parte de 15 minutos e uma parte de 10 minutos",
+    "back": "Voltar"
 }
